--- a/app/views/data-connect/data-connect.html
+++ b/app/views/data-connect/data-connect.html
@@ -55,7 +55,7 @@
 					<div class="col-md-12">
 						<button id="saveButton" class="btn btn-loklak-blue" ng-click="saveDataSource(item); " ng-show="item.editing">Save</button>
 						<button id="editButton" class="btn btn-loklak-blue" ng-click="toggleEditDataSource($event, item); ">Edit</button>
-						<button class="btn btn-danger" data-toggle="modal" ng-click="openConfirmDeleteModal(item)" data-target="#add-connection-modal">Delete</button>
+						<button class="btn btn-danger" ng-click="openConfirmUnsubcribeModal(item)">Unsubscribe</button>
 					</div>
 				</div>
 			</div>
@@ -63,7 +63,7 @@
 		</ul><div id="single-data-map"></div>
 	<div add-connection-modal></div>
 	<div map-view-modal></div>
-	<button id="open-confirm-modal" class="hide" data-toggle="modal" data-target="#confirm-delete-modal">Delete</button>
+	<button id="open-confirm-modal" class="hide" data-toggle="modal" data-target="#confirm-unsubscribe-modal">Hide me!</button>
 	<div id="message-view-modal" class="modal fade" role="dialog">
 		<div class="modal-dialog">
 			<div class="modal-content">
@@ -80,17 +80,17 @@
 			</div>
 		</div>
 	</div>
-	<div id="confirm-delete-modal" class="modal" role="dialog">
-		<div id="confirm-delete-modal-dialog" class="modal-dialog">
+	<div id="confirm-unsubscribe-modal" class="modal" role="dialog">
+		<div id="confirm-unsubscribe-modal-dialog" class="modal-dialog">
 			<div class="modal-content" id="add-connection-modal-content">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal">&times;</button>
 				</div>
 				<div class="modal-body">
-					<h4 style="text-align : center">Are you sure you want to delete this ?</h4>
+					<h4 style="text-align : center">Are you sure you want to unsubscribe this ?</h4>
 				</div>
 				<div class="modal-footer">
-					<button id="confirmDeleteButton" class="btn btn-danger" ng-click="deleteDataSource();" data-dismiss="modal">Delete</button>
+					<button id="confirmDeleteButton" class="btn btn-danger" ng-click="unsubscribeDataSource();" data-dismiss="modal">Unsubscribe</button>
 					<button id="cancelDeleteButton" class="btn btn-default" data-dismiss="modal">Cancel</button>
 				</div>
 			</div>
