fix for "-wise" and button type

--- a/app/views/analyze/analyze.html
+++ b/app/views/analyze/analyze.html
@@ -57,8 +57,8 @@
                 </div>
                 <input type="text" class="inputname" ng-model="username"  placeholder="screenname" required></input> 
                 <br><center>
-                <button type="button" class="btn btn-default big" aria-label="Left Align"  ng-click="getstatfollower()"  >
-                <span class="fa fa-bar-chart" aria-hidden="true">Analyze!</span>
+                <button type="button" class="btn btn-loklak-blue btn-lg" aria-label="Left Align"  ng-click="getstatfollower()"  >
+                <span class="fa fa-bar-chart" aria-hidden="true"> Create new Report</span>
                 </button>
                 </center><br>
 
@@ -101,7 +101,7 @@
             <div id="analysis-report" class="main-result-container whitebg" >
                 <div class="row">
                     <div class="col-md-6 margin-right-neg">
-                        <h3 class="analysis-titles">Country wise Followers</h3>
+                        <h3 class="analysis-titles">Country-wise Followers</h3>
                         <canvas id="doughnut" class="chart chart-doughnut top-margin-mid" data="countryvalues" colour="{#F7464A,#46BFBD,#FDB45C,#878BB6}" labels="countrylabels">
                         </canvas>
                     </div>
@@ -115,7 +115,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 margin-right-neg">
-                        <h3 class="analysis-titles">City wise Followers</h3>
+                        <h3 class="analysis-titles">City-wise Followers</h3>
                         <canvas id="doughnut" class="chart chart-doughnut top-margin-mid"data="cityvalues" colour="{#F7464A,#46BFBD,#FDB45C,#878BB6}" labels="citylabels">
                         </canvas>
                     </div>
