Changed all === to ==
This change seems to stop the wall from breaking. Temporary change, till
the exact reasons can be found out and strict equality can be
implemented

--- a/app/styles/_wall.scss
+++ b/app/styles/_wall.scss
@@ -657,10 +657,12 @@
     text-align: center;
     border-radius: 50%;
     font-weight: bold;
+    font-size: 2.2vh;
 }
 
 .leaderboard-label {
     top: 9px;
+    font-size: 2vh;
     position: absolute;
     left: 6.8vh;
     text-align: center;
