Add Min Height to Fix Wall Tags Not Appearing

--- a/app/styles/_wall.scss
+++ b/app/styles/_wall.scss
@@ -143,7 +143,7 @@
 }
 
 .wall-tag-input {
-    height: 60px;
+    min-height: 60px;
     outline: none !important;
     border: 0px solid transparent !important;
     padding: 5px;
