--- a/app/styles/_loader.scss
+++ b/app/styles/_loader.scss
@@ -1,3 +1,11 @@
+/*! 
+ * angular-loading-bar v0.8.0
+ * https://chieffancypants.github.io/angular-loading-bar
+ * Copyright (c) 2015 Wes Cruver
+ * License: MIT
+ */
+
+/* Make clicks pass-through */
 #loading-bar,
 #loading-bar-spinner {
   pointer-events: none;
@@ -61,7 +69,7 @@
   position: fixed;
   z-index: 10002;
   top: 18px;
-  left: 51%;
+  left: 50%;
   margin-left: -7px;
 }
 
@@ -70,9 +78,9 @@
   height: 14px;
 
   border:  solid 2px transparent;
-  border-top-color:  #55acee;
-  border-left-color: #55acee;
-  border-radius: 10px;
+  border-top-color:  #29d;
+  border-left-color: #29d;
+  border-radius: 50%;
 
   -webkit-animation: loading-bar-spinner 400ms linear infinite;
   -moz-animation:    loading-bar-spinner 400ms linear infinite;
