--- a/app/styles/_admin.scss
+++ b/app/styles/_admin.scss
@@ -2557,8 +2557,9 @@ a:focus {
 }
 .nav-tabs-custom > .nav-tabs > li {
   border-top: 3px solid transparent;
-  margin-bottom: -2px;
-  margin-right: 5px;
+  margin-bottom: -0.5%;
+  margin-right: 1.25%;
+  width: 32%;
 }
 .nav-tabs-custom > .nav-tabs > li > a {
   color: #444;
