Bfix(#534): Fixes sidebar and topbar edge positioning issue

--- a/app/styles/_report.scss
+++ b/app/styles/_report.scss
@@ -171,6 +171,7 @@
 	}
 	#inffollowers {
 		padding-left: 10px;
+		padding-right: inherit;
 		.analysis-titles {
 			text-align: center;
 			margin-bottom: 20px;
