Fixes right-bar chart positioning

--- a/app/styles/_report.scss
+++ b/app/styles/_report.scss
@@ -189,11 +189,11 @@
 		> .row {
 			padding: 25px 10px 10px 10px;
 			.chart {
-				left: -10px;
 				margin-bottom: 10px;
 			}
 		}
 		.doughnut-legend {
+			margin-left: 10px;
 			li {
 				margin-bottom: 11px;
 			}
