Bfix(#580): Fixes spaces between inline search-filters

--- a/app/styles/_search.scss
+++ b/app/styles/_search.scss
@@ -1064,6 +1064,7 @@
 		ul {
 			margin-left: 0 !important;
 			padding-left: 0 !important;
+			font-size: 0;
 		}
 		ul li {
 			display: inline-block;
