Bfix #490 (part-4): Adds "follows you" text for accounts which follow signed in user
Removes class from screen-name div

--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -148,6 +148,15 @@
 					overflow: hidden;
 					color: rgb(51, 51, 51);
 				}
+				.home-user-follows-text {
+				    color: #8899a6;
+				    font-size: 11px;
+				    font-weight: 400;
+				    margin-left: 5px;
+				    text-transform: uppercase;
+				    float: right;
+				    margin-top: 7px;
+				}
 			}
 		}
 		.bottom-content {
