Implemented local auth with passportjs and jwt
User should have mongodb installed, test db is used
Then they should change the jwt secret string in
custom_configFile.json.

--- a/app/styles/_topnav.scss
+++ b/app/styles/_topnav.scss
@@ -256,6 +256,7 @@
 				border: 1px solid #e1e8ed;
 				border-radius: 5px;
 				margin-top: 9px;
+        margin-right: 10%;
 				li {
 					margin: 0;
 					padding: 0;
