--- a/app/views/signin-twitter.html
+++ b/app/views/signin-twitter.html
@@ -1,4 +1,4 @@
-<!-- <div ng-show="twitterSession" class="twitter-session">
+<div ng-show="twitterSession" class="twitter-session">
 		<img id="home-view-user-avatar" ng-click="toggleOptions()" ng-src="{{twitterSession.profile_image_url_https}}" class="user-image" alt="{{twitterSession.name}}">
 		<div class="hidden-user-info hide">
 			<ul class="top-options">
@@ -13,12 +13,12 @@
 				<li><a href="#" ng-click="hello('twitter').logout()">Log out</a></li>
 			</ul>
 		</div>
-</div> -->
+</div>
 
 <div ng-show="!twitterSession" class="signin">
 	<a href="">
 		<span class="link" ng-href="#signupModal" data-target="#signupModal">
-            <button type="button" class="btn btn-loklak-blue btn-lg" ng-hide="isLoggedIn" data-toggle="modal" data-target="#signupModal"><i class="fa"></i>Sign in</button>
+            <button type="button" class="btn btn-loklak-blue btn-lg" ng-hide="isLoggedIn" data-toggle="modal" data-target="#signupModal"><i class="fa"></i>Sign Up</button>
 			<button type="button" class="btn btn-loklak-blue btn-lg" ng-show="isLoggedIn" ng-click="showOptions=!showOptions"><i class="fa"></i>{{ currentUser.name }}</button>
 		</span>
 	</a>
@@ -32,7 +32,7 @@
             </li>
         </ul>
         <ul class="bottom-options">
-            <li><a href="#" ng-click="logout()">Log out</a></li>
+            <li><a href="#" ng-click="logout();showOptions=!showOptions;">Log out</a></li>
         </ul>
     </div>
 </div>
